--- a/wartisan/AA.html
+++ b/wartisan/AA.html
@@ -30,7 +30,7 @@
            	<p class="cbutton"> <input id="submit" type="submit" value="" name="submit"></p>
            </div>
            <p class="promotext">Sign up to get free trial. We will also keep you posted on our progress!</p>
-           <p class="promotext smal">Please see our <a href="" ><i><b>privacy</b></i></a> policy to learn how we store your 
+           <p class="promotext smal">Please see our <a href="privacy.html" ><i><b>privacy</b></i></a> policy to learn how we store your 
 information.</p>
         </div>
         <div class="cright">
